--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "framer-motion": "^2.9.1",
+    "material-ui": "^0.20.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-device-detect": "^1.14.0",
